--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
+    <title>My Github Resume</title>
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
